<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/all_file"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_item_main_all"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/ll_pdf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/folder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:maxWidth="60dp"
            android:text="@string/all_file"
            android:textColor="@color/colorTextMain"
            android:textSize="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pdf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_item_main_pdf"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/ll_word"
        app:layout_constraintStart_toEndOf="@+id/all_file"
        app:layout_constraintTop_toTopOf="@+id/all_file">

        <ImageView

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/google_pdf" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:maxWidth="60dp"
            android:text="@string/pdf"
            android:textColor="@color/colorTextMain"
            android:textSize="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_word"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_item_main_doc"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_pdf"
        app:layout_constraintTop_toTopOf="@+id/all_file">

        <ImageView

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/google_docs" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:maxWidth="60dp"
            android:text="@string/word"
            android:textColor="@color/colorTextMain"
            android:textSize="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_excel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_item_main_xls"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/all_file"
        app:layout_constraintStart_toStartOf="@+id/all_file"
        app:layout_constraintTop_toBottomOf="@+id/all_file">

        <ImageView

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/google_sheets" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:maxWidth="60dp"
            android:text="@string/excel"
            android:textColor="@color/colorTextMain"
            android:textSize="10dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_pp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_main_pp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/ll_pdf"
        app:layout_constraintStart_toStartOf="@+id/ll_pdf"
        app:layout_constraintTop_toTopOf="@+id/ll_excel">

        <ImageView

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/gg_red" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:maxWidth="60dp"
            android:text="@string/power_point"
            android:textColor="@color/colorTextMain"
            android:textSize="10dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_main_txt"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/ll_word"
        app:layout_constraintStart_toStartOf="@+id/ll_word"
        app:layout_constraintTop_toTopOf="@+id/ll_excel">

        <ImageView

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/google_forms" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:maxWidth="60dp"
            android:text="@string/text_1"
            android:textColor="@color/colorTextMain"
            android:textSize="10dp" />


    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ll_text"
        app:layout_constraintStart_toStartOf="@+id/ll_excel"
        app:layout_constraintTop_toBottomOf="@+id/ll_excel"
        app:cardCornerRadius="5dp"
        app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_favourite"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/bg_item_main"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ll_text"
        app:layout_constraintStart_toStartOf="@+id/ll_excel"
        app:layout_constraintTop_toBottomOf="@+id/ll_excel">

        <ImageView

            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_bookmark_file_selected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView

            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:maxWidth="60dp"
            android:text="@string/favourite"
            android:textColor="@color/colorTextMain"
            android:gravity="center_vertical"
            android:textSize="18dp"
            android:paddingStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView

            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:maxWidth="60dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>