<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/create_office"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_item_main_create"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/ll_pdf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_create_office"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:lines="1"
            android:maxWidth="120dp"
            android:text="Create"
            android:textColor="@color/colorTextSplash"
            android:textSize="12dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/cam_scanner"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ll_pdf_to_image"
        app:layout_constraintStart_toEndOf="@+id/create_office"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_item_main_scanner"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/ll_pdf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_scan_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"

            android:lines="1"
            android:maxWidth="120dp"
            android:text="@string/camera_scanner"
            android:textColor="@color/colorTextSplash"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pdf_to_image"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/cam_scanner"
        app:layout_constraintEnd_toStartOf="@+id/ll_image_to_pdf"
        app:layout_constraintStart_toEndOf="@+id/cam_scanner"
        app:layout_constraintTop_toTopOf="@+id/cam_scanner">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_item_main_img"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/ll_pdf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_jpg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:lines="1"
            android:maxWidth="120dp"
            android:text="@string/pdf_to_image"
            android:textColor="@color/colorTextSplash"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_image_to_pdf"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ll_pdf_to_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cam_scanner">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_item_main_pdf_to_img"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/ll_pdf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_pdf2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:lines="1"
            android:maxWidth="120dp"
            android:text="@string/image_to_pdf"
            android:textColor="@color/colorTextSplash"
            android:textSize="12dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>